@@ -7,6 +7,7 @@
 	when writing in the status bar, and on when waiting for	input.
 	* src/prompt.c (update_the_statusbar): Chop two parameters that are
 	always the same, and that are global variables anyway.
+	* src/prompt.c (update_bar_if_needed): Rename this for more contrast.
 
 2016-02-05  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/texinfo/nano.texi: Condense the descriptions of command-key
